fix: fix wrapping year line 'september'

--- a/src/modules/calendar/calendar.css
+++ b/src/modules/calendar/calendar.css
@@ -12,7 +12,7 @@
 }
 
 .month {
-    width: 160px;
+    width: 170px;
     text-align: center;
     font-size: 24px;
     font-weight: 700;
